# poclimon

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  RESEARCH.md  build.rs  poclimon.toml  poclimon_config.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-tag.yml  build-release.yml  ci.yml  release.yml
src/: anim_data.rs  animal.rs  animation.rs  app.rs  cli.rs  creature.rs  creatures.rs  eyes.rs  game.rs  lib.rs  main.rs  notification.rs  render.rs  sprite.rs  sprite_loading.rs  sprite_sheet.rs  ui.rs
src/config/: mod.rs
src/sprite/: fallback.rs  mod.rs
src/ui/: mod.rs  panels.rs  pen.rs  splash.rs  theme.rs
tests/: sprite_integration.rs  visual_validation.rs
