[package]
name = "poclimon"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "poclimon"
path = "src/main.rs"

[lib]
name = "poclimon"
path = "src/lib.rs"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] }
ratatui-image = "4"
image = "0.25"
