[package]
name = "poclimon"
version = "0.3.4"
edition = "2024"
description = "A TUI idle pet game.  Sort of."
authors = ["John Barden"]
license = "MIT"
repository = "https://github.com/JohnSBarden/poclimon"
homepage = "https://github.com/JohnSBarden/poclimon"
readme = "README.md"
keywords = ["terminal", "tui", "game", "pokemon", "pet"]
categories = ["games", "command-line-utilities"]

[[bin]]
name = "poclimon"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] }
ratatui-image = "4"
image = "0.25"

[build-dependencies]
image = "0.25"
